--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,5 +6,9 @@ services:
       - '27017:27017'
     environment:
       MONGO_INITDB_DATABASE: nest-pokemon
+
     volumes:
-      - ./mongo:/data/db
+      - mongo-data:/data/db
+
+volumes:
+  mongo-data:
